--- a/dada/templates/partial_sending_options_widget.tmpl
+++ b/dada/templates/partial_sending_options_widget.tmpl
@@ -9,14 +9,12 @@
 		<li>
 			<input 
 			type="button" 
-			value="Preview" 
+			value="Preview..." 
 			class="button small cautionary preview_message_receivers" 
 			>
 		</li>
 	</ul> 
-	
-	<div id="preview_message_receivers_loading"></div> 
-    <div id="preview_message_receivers_results"></div> 
+	<div id="preview_message_receivers_div" data-reveal class="reveal-modal medium" role="dialog"></div> 
 
 <!-- tmpl_else --> 
 
