--- a/dada/templates/send_email_message_body_help_widget.tmpl
+++ b/dada/templates/send_email_message_body_help_widget.tmpl
@@ -1,8 +1,7 @@
 <!-- begin send_email_message_body_help_widget.tmpl --> 
 
-<div  style="display:none"> 
+<div data-reveal id="send_email_message_body_help" class="reveal-modal medium" role="dialog"> 
 	
-<div id="message_body_help">
 
 <h2>
  <!-- tmpl_var PROGRAM_NAME --> supports sending messages formatted in HTML, Plaintext, or both!
@@ -34,9 +33,11 @@
 </p>
 </li>
 
+<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+
+
 </ul>
 
-	</div>
 </div>
 	
 <!-- end send_email_message_body_help_widget --> 
