--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -101,7 +101,7 @@
 
 			<fieldset> 
 				<legend>
-					Message Body [<a href="#" onclick="$.colorbox({inline:true, href:$('#message_body_help')})">?</a>]
+					Message Body [<a href="#" data-reveal-id="send_email_message_body_help">?</a>]
 				</legend>
 				<ul class="tabs" data-tab>
 					<li class="tab-title <!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" --><!-- tmpl_else -->active<!-- /tmpl_if -->">
