--- a/dada/templates/send_url_email_message_body_help_widget.tmpl
+++ b/dada/templates/send_url_email_message_body_help_widget.tmpl
@@ -1,9 +1,6 @@
 <!-- begin send_url_email_message_body_help_widget.tmpl --> 
 
-<div  style="display:none"> 
-
-
-<div id="message_body_help">
+<div data-reveal id="send_email_message_body_help" class="reveal-modal medium" role="dialog"> 
 
 <h2>
 	Send a Webpage Best Practices:
@@ -46,8 +43,6 @@
 
 </ul>
 
-	</div>
+</div>
 	
-</div> 
-
 <!-- end send_email_message_body_help_widget --> 
