--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -109,8 +109,8 @@
 
 					<fieldset> 
 						 <legend>
-							 Message Body [<a href="#" onclick="$.colorbox({inline:true, href:$('#message_body_help')})">?</a>]
-						 </legend>
+		 					Message Body [<a href="#" data-reveal-id="send_email_message_body_help">?</a>]
+						</legend>
 
 						<ul class="tabs" data-tab>
 							<li class="tab-title <!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" --><!-- tmpl_else -->active<!-- /tmpl_if -->">
@@ -266,7 +266,6 @@
 		</div>	
 	</div>
 </form>
-	
 <!-- tmpl_include send_url_email_message_body_help_widget.tmpl -->		
 
 <!-- end send_url_screen.tmpl -->
