--- a/dada/templates/plugins/change_root_password/default.tmpl
+++ b/dada/templates/plugins/change_root_password/default.tmpl
@@ -1,62 +1,76 @@
 <!-- tmpl_set name="title" value="Plugins &#187; Change Your <!-- tmpl_var PROGRAM_NAME --> Root Password" -->
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
+<div class="row">
+	<div class="medium-10 large-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Plugins
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Change Root Password
+			</a>
+		</nav>
 	</div>
-	<!-- tmpl_include help_link_widget.tmpl -->
+	<div class="medium-2 large-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
 <div id="screen_meta" data-menu_highlight="change_root_password"></div>
 
 
 <form method="post"> 
-
-    <input type="hidden" name="flavor"  value="plugins" >
+	<input type="hidden" name="flavor"  value="plugins" >
     <input type="hidden" name="plugin"  value="change_root_password" >
     <input type="hidden" name="prm"     value="change_password" >
     <input type="hidden" name="process" value="true" >
 
 <!--tmpl_if old_root_pass_incorrect --> 
-
-    <p class="error">
-     You did not type in the correct, current <!-- tmpl_var PROGRAM_NAME --> Root Password. Please try again.
-    </p>
-
+	<div class="alert-box error radius">
+		You did not type in the correct, current <!-- tmpl_var PROGRAM_NAME --> Root Password. Please try again.
+	</div>
 <!--/tmpl_if--> 
 
 
 <!-- tmpl_if new_pass_no_match --> 
-
-    <p class="error"> 
-        Your retyped new <!-- tmpl_var PROGRAM_NAME --> Root Password did not match!
-    </p>
-
+	<div class="alert-box error radius">
+		Your retyped new <!-- tmpl_var PROGRAM_NAME --> Root Password did not match!
+	</div>
 <!--/tmpl_if--> 
 
-	<p>
-	 Enter your old <!-- tmpl_var PROGRAM_NAME --> Root <label for="old_password">Password</label>:
-	 <br >
-	 <input type="password" id="old_password" name="old_password" maxlength="24" >
-	</p>
-	
-
-<p>
- <label for="new_password">
-  Enter your new <!-- tmpl_var PROGRAM_NAME --> Root Password</label>:
- <br >
- <input type="password" name="new_password" id="new_password" size="16" maxlength="24" >
-</p>
-
-<p>
- <label for="again_new_password">
-  Re-enter your new <!-- tmpl_var PROGRAM_NAME --> Root Password</label>:
- <br >
- <input type="password" name="again_new_password" id="again_new_password" size="16" maxlength="24" >
-</p>
-
-<div class="buttonfloat">
- <input type="reset"  class="cautionary button" >
- <input type="submit" class="processing button" value="Change <!-- tmpl_var PROGRAM_NAME --> Root Password" >
+<div class="row">
+	<div class="small-12 columns">
+		<label for="old_password">
+		Current <!-- tmpl_var PROGRAM_NAME --> Root Password
+		</label>
+		<input type="password" id="old_password" name="old_password" maxlength="24">
+	</div>
 </div>
-<div class="floatclear"></div>
 
+<div class="row">
+	<div class="small-12 columns">
+		<label for="new_password">
+			New <!-- tmpl_var PROGRAM_NAME --> Root Password
+		</label>
+		<input type="password" name="new_password" id="new_password" maxlength="24">
+	</div>
+</div>
+
+<div class="row">
+	<div class="small-12 columns">
+		<label for="again_new_password">
+		Re-enter New <!-- tmpl_var PROGRAM_NAME --> Root Password</label>
+		<input type="password" name="again_new_password" id="again_new_password" size="16" maxlength="24">
+	</div>
+</div>
+
+<ul class="button-group right">
+    <li>
+		<input type="reset"  class="cautionary button">
+	</li>
+	<li>
+		<input type="submit" class="processing button" value="Change <!-- tmpl_var PROGRAM_NAME --> Root Password">
+	</li>
+</ul>
 </form> 
