--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -1,14 +1,25 @@
-	
 <!-- tmpl_set name="title" value="Plugins &#187; Password Protect Directories" --> 
+
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Plugins
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Password Protect Directories
+			</a>
+		</nav>
+	</div>
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
+</div>
+
 <div id="screen_meta" data-menu_highlight="password_protect_directories"></div>
-
-
-<div id="screentitle"> 
-<div id="screentitlepadding">
-	<!-- tmpl_var title --> 
-</div>
-<!-- tmpl_include help_link_widget.tmpl -->
-</div>
 <div id="plugins_password_protect_directories_default"></div> 
 
 
